Fixed: theme control alignment when navbar collapsed

--- a/src/common/navbar/BasicNavbar.css
+++ b/src/common/navbar/BasicNavbar.css
@@ -5,3 +5,7 @@
 .navbar-collapse {
     justify-content: end;
 }
+
+.theme-toggle {
+    justify-content: center;
+}
